dashboard-angular/src/styles.css
body {
  margin: 0;
  font-family:
    Roboto,
    "Helvetica Neue",
    sans-serif;
}

.mat-drawer-inner-container {
  overflow: hidden !important;
  -ms-overflow-style: none !important;
  scrollbar-width: none !important;
}

.mat-drawer-inner-container::-webkit-scrollbar {
  display: none !important;
  width: 0 !important;
  height: 0 !important;
  overflow: hidden;
}

gridster-preview {
  display: none !important;
}

.NgxEditor__MenuBar {
  --ngx-editor-menubar-bg-color: #f5f5f5;
  --ngx-editor-menu-item-hover-bg-color: #b5b5b5;
  --ngx-editor-popup-bg-color: #f5f5f5;
}

.NgxEditor {
  border: none !important;
  overflow: auto !important;
}

